--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  user_id: 1
   name: MyString
   icon: 
   type: 
 
 two:
+  user_id: 1
   name: MyString
   icon: 
   type: 
