--- a/test/fixtures/subject_profiles.yml
+++ b/test/fixtures/subject_profiles.yml
@@ -1,15 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 1
-  name: MyString
-  icon: 
+  subject_id: 1
+  image: 
   type: 
-  role: 1
+  teacher_id: 1
 
 two:
-  user_id: 1
-  name: MyString
-  icon: 
+  subject_id: 1
+  image: 
   type: 
-  role: 1
+  teacher_id: 1
