ユーザー情報を変更できるように

--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -4,12 +4,12 @@ one:
   user_id: 1
   name: MyString
   icon: 
-  type: 
+  icontype: MyString
   role: 1
 
 two:
   user_id: 1
   name: MyString
   icon: 
-  type: 
+  icontype: MyString
   role: 1
