--- a/test/fixtures/subject_profiles.yml
+++ b/test/fixtures/subject_profiles.yml
@@ -3,11 +3,11 @@
 one:
   subject_id: 1
   image: 
-  type: 
+  icontype: MyString
   teacher_id: 1
 
 two:
   subject_id: 1
   image: 
-  type: 
+  icontype: MyString
   teacher_id: 1
