講義の説明を書けるように変更

--- a/test/fixtures/subject_profiles.yml
+++ b/test/fixtures/subject_profiles.yml
@@ -5,9 +5,11 @@ one:
   image: 
   icontype: MyString
   teacher_id: 1
+  name: MyString
 
 two:
   subject_id: 1
   image: 
   icontype: MyString
   teacher_id: 1
+  name: MyString
